<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Register">

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/menubutton"
        android:text="@string/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword" />

    <EditText
        android:id="@+id/regPhone"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textfieldbackground"
        android:ems="10"
        android:hint="@string/regPhone"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColorHint="@color/textFieldHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regSurname" />

    <EditText
        android:id="@+id/regName"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textfieldbackground"
        android:ems="10"
        android:hint="@string/regName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/textFieldHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textfieldbackground"
        android:ems="10"
        android:hint="@string/regEmail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="@color/textFieldHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPhone" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textfieldbackground"
        android:ems="10"
        android:hint="@string/regPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/textFieldHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmail" />

    <EditText
        android:id="@+id/regSurname"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textfieldbackground"
        android:ems="10"
        android:hint="@string/regSurname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/textFieldHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regName" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButtonReg" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="111dp"
        android:layout_height="112dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logocrm" />

    <Button
        android:id="@+id/backButtonReg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/menubutton"
        android:onClick="back"
        android:text="wstecz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>