<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">

    <EditText
        android:id="@+id/logEmail"
        android:layout_width="298dp"
        android:layout_height="39dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/textfieldbackground"
        android:ems="10"
        android:hint="@string/regEmail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textFieldColor"
        android:textColorHighlight="#0C8B4B"
        android:textColorHint="@color/textFieldHintColor"
        android:textColorLink="#A81B1B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/logPassword"
        android:layout_width="298dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/textfieldbackground"
        android:ems="10"
        android:hint="@string/regPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHighlight="#0C8B4B"
        android:textColorHint="#7A0C133D"
        android:textColorLink="#A81B1B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logEmail" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btnbloggin"
        android:fontFamily="sans-serif"
        android:shadowColor="#FA251F1F"
        android:text="@string/btnLogin"
        android:textColor="#000000"
        android:textColorHint="#02570F"
        android:textColorLink="#009C5959"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logPassword" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="138dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toTopOf="@+id/logEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logocrm" />

</androidx.constraintlayout.widget.ConstraintLayout>